--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <body class="bg-dark text-light">
         <div class="container">
             <h1>TIK TAK mf</h1>
-            <p id="random"></p>
+            <p id="random" class="fs-3"></p>
+            <p id="indovinato" class="fs-2"></p>
         </div>
         <script src="main.js"></script>
     </body>
